--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -69,9 +69,9 @@
 #  - title: "Sobre Blumenau"
 #    url: "/blumenau/"
 
-- title: "Sobre a SBC"
-  url: "/sobresbc/"
-  side: left
+#- title: "Sobre a SBC"
+#  url: "/sobresbc/"
+#  side: left
 
 - title: "Contato"
   url: "/contato/"
