--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@
 #  - title: "Anais"
 #    url: "/anais/"
 
-- title: "Workshop Est. Empíricos"
+- title: "Workshop Estudos Empíricos"
   url: "/workshop/"
   side: left
 
