--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,9 +1,9 @@
 ﻿- menu_name: "Agradecimentos"
 
-- name: "Banner ERES por João Victor Santos da Costa"
+- name: "Banner ERES por Ricardo T. Geraldi"
   #url: "http://ricardogeraldi.com.br"
   class: "network-entypo"
-  title: "Banner ERES por João Victor Santos da Costa"
+  title: "Banner ERES por Ricardo T. Geraldi"
 
 - name: "Ícones de Daniel Bruce"
   url: "http://entypo.com/"
