--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,8 +55,8 @@
     url: "/hospedagem/"
   - title: "Sobre Maringá"
     url: "/maringa/"
-#  - title: "FURB"
-#    url: "/furb/"
+  - title: "Alimentação no Câmpus"
+    url: "/ru_uem/"
 #  - title: "UniSENAI"
 #    url: "/unisenai/"
 #  - title: "Como Chegar à ERES"
