--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 ﻿- title: Início
   url: "/"
   side: left
+  
+- title: "Artigos Aceitos"
+  url: "/aceitos/"
+  side: left
 
 - title: "Chamada de Trabalhos"
   url: "/chamada/"
