--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
   url: "/"
   side: left
 
-- title: "Artigos Aceitos"
-  url: "/aceitos/"
-  side: left
+# - title: "Artigos Aceitos"
+#   url: "/aceitos/"
+#   side: left
 
 - title: "Chamada de Trabalhos"
   url: "/chamada/"
