--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,13 +17,13 @@
 - title: "Programação Geral"
   url: "/programacao/"
   side: left
-  dropdown:
-    - title: "Palestras"
-      url: "/palestras/"
-    - title: "Minicursos"
-      url: "/minicursos/"
-    - title: "Sessões Técnicas"
-      url: "/sessoes/"
+  # dropdown:
+  #   - title: "Palestras"
+  #     url: "/palestras/"
+  #   - title: "Minicursos"
+  #     url: "/minicursos/"
+  #   - title: "Sessões Técnicas"
+  #     url: "/sessoes/"
 
 - title: "Inscrições"
   url: "/inscricoes/"
