--- a/_config.yml
+++ b/_config.yml
@@ -8,16 +8,13 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'ERES 2024'
+title: "ERES 2024"
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'ERES 2024 - Escola Regional de Engenharia de Software'
+slogan: "ERES 2024 - Escola Regional de Engenharia de Software"
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'A Escola Regional de Engenharia de Software (ERES) é um evento com o objetivo de promover e disseminar conhecimento e boas práticas de Engenharia de Software'
-
-# The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-credits: '<p>Created with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
+description: "A Escola Regional de Engenharia de Software (ERES) é um evento com o objetivo de promover e disseminar conhecimento e boas práticas de Engenharia de Software"
 
 # Main author of the website
 # See > authors.yml
@@ -25,8 +22,8 @@ author: Edson OliveiraJr, Fernando Santos
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://eres-sbc-br.github.io'
-baseurl: '/'
+url: "https://eres-sbc-br.github.io"
+baseurl: "/"
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -38,9 +35,9 @@ improve_content: https://github.com/eres-sbc-br/eres2024/feeling-responsive/edit
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://eres-sbc-br.github.io/eres2024/images/'
+urlimg: "https://eres-sbc-br.github.io/eres2024/images/"
 
-urlcertificados: 'https://github.com/eres-sbc-br/eres2024/tree/main/certificados/'
+urlcertificados: "https://github.com/eres-sbc-br/eres2024/tree/main/certificados/"
 
 # Logo size is 600x80 pixels
 #logo: "logo_eres_2020.png"
@@ -48,10 +45,9 @@ urlcertificados: 'https://github.com/eres-sbc-br/eres2024/tree/main/certificados
 
 # Plugins
 plugins:
-    - jekyll-asciidoc
-    - jekyll-gist
-    - jekyll-paginate
-
+  - jekyll-asciidoc
+  - jekyll-gist
+  - jekyll-paginate
 
 #       ____              _             __  _
 #      / __ \____ _____ _(_)___  ____ _/ /_(_)___  ____
@@ -60,30 +56,27 @@ plugins:
 #   /_/    \__,_/\__, /_/_/ /_/\__,_/\__/_/\____/_/ /_/
 #               /____/
 #
-paginate: 5                      # Paginates all X entries
-paginate_path: "blog/page:num"   # Pagination path › Important for blog page in /blog/ to work
-
+paginate: 5 # Paginates all X entries
+paginate_path: "blog/page:num" # Pagination path › Important for blog page in /blog/ to work
 
 # Theme works best with Kramdown (using the table of contents function)
-markdown           : kramdown
-permalink          : /:categories/:title/
-highlight          : rouge
-excerpt_separator  : "<!--more-->"
-include            : ['.htaccess']
+markdown: kramdown
+permalink: /:categories/:title/
+highlight: rouge
+excerpt_separator: "<!--more-->"
+include: [".htaccess"]
 # Exclude these files from your production _site
 exclude:
-    - .sass-cache
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
-    - INSTALL.md
-    - vendor
-
+  - .sass-cache
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - INSTALL.md
+  - vendor
 
 # The language setting is used in /includes/header.html for html-settings
-language: 'pt'
-
+language: "pt"
 
 # Used › default.html front-matter and compress.html
 # Options › http://jch.penibelst.de
@@ -95,7 +88,6 @@ compress_html:
   ignore:
     envs: [development]
 
-
 #
 #       ____       ____            ____
 #      / __ \___  / __/___ ___  __/ / /_
@@ -106,26 +98,22 @@ compress_html:
 # Default Settings
 
 defaults:
-  -
-    scope:
-      path: '' 				# an empty string here means all files in the project
-      type: 'pages'
+  - scope:
+      path: "" # an empty string here means all files in the project
+      type: "pages"
     values:
-      show_meta: false 	# Hide metadata for all pages
+      show_meta: false # Hide metadata for all pages
       # sidebar:    		# Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for pages
-  -
-    scope:
-      path: ''
-      type: 'posts'
+      author: phlow # Default author for pages
+  - scope:
+      path: ""
+      type: "posts"
     values:
-      show_meta: true   # Show metadata for all posts
+      show_meta: true # Show metadata for all posts
       # sidebar:        # Possible values › left, right › by default there will be no sidebar
       comments: false
-      author: phlow     # Default author for posts
-
-
+      author: phlow # Default author for posts
 
 #       _   __            _             __  _
 #      / | / /___ __   __(_)___ _____ _/ /_(_)___  ____
@@ -137,21 +125,17 @@ defaults:
 #  Open _data/navigation.yml to adjust the left and right topbar navigation
 #
 
-
-
 #     _____ __________
 #    / ___// ____/ __ \
 #    \__ \/ __/ / / / /
 #   ___/ / /___/ /_/ /
 #  /____/_____/\____/    Verify Website to Webmaster Tools
 
-google_author:             'https://plus.google.com/u/0/118311555303973066167'
-google_site_verification:  'Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ'
-bing_webmastertools_id:    '0FB4C028ABCF07C908C54386ABD2D97F'
+google_author: "https://plus.google.com/u/0/118311555303973066167"
+google_site_verification: "Vk0IOJ2jwG_qEoG7fuEXYqv0m2rLa8P778Fi_GrsgEQ"
+bing_webmastertools_id: "0FB4C028ABCF07C908C54386ABD2D97F"
 # yandex_site_verification:  ''
 # alexa_verify_id:           ''
-
-
 
 #       ______            _
 #      / ____/___ __   __(_)________  ____  _____
@@ -160,20 +144,12 @@ bing_webmastertools_id:    '0FB4C028ABCF07C908C54386ABD2D97F'
 #   /_/    \__,_/ |___/_/\___/\____/_/ /_/____/   Favicon-Crap: Favicons, Chrome, Android & Apple Touch Buttons
 #                                                 More information » https://mathiasbynens.be/notes/touch-icons
 
-favicon-32x32:                          "logo_eres_2024.png"
-#'favicon-32x32.png'
-touch-icon-192x192:                     'touch-icon-192x192.png'
-apple-touch-icon-180x180-precomposed:   'apple-touch-icon-180x180-precomposed.png'
-apple-touch-icon-152x152-precomposed:   'apple-touch-icon-152x152-precomposed.png'
-apple-touch-icon-144x144-precomposed:   'apple-touch-icon-144x144-precomposed.png'
-apple-touch-icon-120x120-precomposed:   'apple-touch-icon-120x120-precomposed.png'
-apple-touch-icon-114x114-precomposed:   'apple-touch-icon-114x114-precomposed.png'
-apple-touch-icon-76x76-precomposed:     'apple-touch-icon-76x76-precomposed.png'
-apple-touch-icon-72x72-precomposed:     'apple-touch-icon-72x72-precomposed.png'
-apple-touch-icon-precomposed:           'apple-touch-icon-precomposed.png'
-msapplication_tileimage:                'msapplication_tileimage.png'               # Size 144x144
-msapplication_tilecolor:                '#fabb00'
-
+favicon-32x32: "favicon-32x32.png"
+favicon-16x16: "favicon-16x16.png"
+android-chrome-192x192: "android-chrome-192x192.png"
+android-chrome-512x512: "android-chrome-512x512.png"
+apple-touch-icon: "apple-touch-icon.png"
+mstile-150x150: "mstile-150x150.png"
 
 #       ______                __                __
 #      / ____/___ _________  / /_  ____  ____  / /__
@@ -181,10 +157,9 @@ msapplication_tilecolor:                '#fabb00'
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-og_image:                           'http://images.phlow.de/phlow/phlow_de-logo-512x.png'
-og_locale:                          'en_EN'
-og_type:                            'website'
-
+og_image: "http://images.phlow.de/phlow/phlow_de-logo-512x.png"
+og_locale: "en_EN"
+og_type: "website"
 
 #      _____            _       __   __  ___         ___
 #     / ___/____  _____(_)___ _/ /  /  |/  /__  ____/ (_)___ _
@@ -199,7 +174,6 @@ socialmedia:
 #    twitter:
 #    facebook: eres2020
 
-
 #        ____  _
 #       / __ \(_)________ ___  _______
 #      / / / / / ___/ __ `/ / / / ___/
@@ -211,7 +185,6 @@ socialmedia:
 
 disqus_shortname: feelingresponsive
 
-
 #      _____
 #     / ___/____ ___________
 #     \__ \/ __ `/ ___/ ___/
@@ -220,9 +193,8 @@ disqus_shortname: feelingresponsive
 #
 
 sass:
-    sass_dir : _sass
-    style    : :compressed
-
+  sass_dir: _sass
+  style: :compressed
 
 #       ___                __      __  _
 #      /   |  ____  ____ _/ /_  __/ /_(_)_________
@@ -234,8 +206,6 @@ sass:
 # used in _includes/footer_scripts
 
 #google_analytics_tracking_id: UA-60112281-1
-
-
 
 #   _                 _     _
 #  | |_ __ ___      _| | __| |_ ___
@@ -251,7 +221,6 @@ sass:
 # used in _includes/footer_scripts
 
 # tawkto_embed_uri:
-
 
 #     ___              _     __           __
 #    /   |  __________(_)___/ /___  _____/ /_____  _____
