feat: add /coordenacao_geral/ page content and images

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,7 +30,7 @@
   side: left
 
 - title: "Organização"
-  url: ""
+  url: "/coordenacao_geral/"
   side: left
   dropdown:
     - title: "Coordenação Geral"
