refactor: remove some pages from ORGANIZAÇÃO dropdown

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -37,10 +37,10 @@
       url: "/coordenacao_geral/"
     - title: "Coordenação dos Fóruns"
       url: "/coordenacao_eventos/"
-    - title: "Comitê Científico"
-      url: "/comite_cientifico/"
-    - title: "Publicidade"
-      url: "/publicidade/"
+    # - title: "Comitê Científico"
+    #   url: "/comite_cientifico/"
+    # - title: "Publicidade"
+    #   url: "/publicidade/"
     - title: "Edições Anteriores"
       url: "/edicoes_anteriores/"
 
