feat: add /coordenacao_foruns/ page content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,7 @@
     - title: "Coordenação Geral"
       url: "/coordenacao_geral/"
     - title: "Coordenação dos Fóruns"
-      url: "/coordenacao_eventos/"
+      url: "/coordenacao_foruns/"
     # - title: "Comitê Científico"
     #   url: "/comite_cientifico/"
     # - title: "Publicidade"
