feat: add happy hour page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,8 @@
       url: "/programacao/minicursos/"
     - title: "Sessões Técnicas"
       url: "/programacao/sessoes/"
+    - title: "Happy Hour"
+      url: "/programacao/happy-hour/"
 
 - title: "Inscrições"
   url: "/inscricoes/"
